--- a/src/main/java/com/criollo/machmillenium/vistas/gestor/GestorProyectos.form
+++ b/src/main/java/com/criollo/machmillenium/vistas/gestor/GestorProyectos.form
@@ -122,7 +122,7 @@
                       <preferredScrollableViewportSize width="1000" height="900"/>
                       <preferredSize width="685" height="450"/>
                       <requestFocusEnabled value="false"/>
-                      <showVerticalLines value="false"/>
+                      <showVerticalLines value="true"/>
                     </properties>
                   </component>
                 </children>
@@ -163,6 +163,7 @@
                   <component id="68fa8" class="javax.swing.JTable" binding="tablaTipoMaquinaria">
                     <constraints/>
                     <properties>
+                      <autoResizeMode value="4"/>
                       <opaque value="true"/>
                       <preferredScrollableViewportSize width="1000" height="900"/>
                       <preferredSize width="685" height="450"/>
@@ -219,6 +220,7 @@
                   <component id="7ac72" class="javax.swing.JTable" binding="tablaMaquinarias">
                     <constraints/>
                     <properties>
+                      <autoResizeMode value="4"/>
                       <preferredScrollableViewportSize width="1000" height="900"/>
                       <preferredSize width="685" height="450"/>
                     </properties>
@@ -244,6 +246,7 @@
                   <component id="182ef" class="javax.swing.JTable" binding="tablaTipoInsumos">
                     <constraints/>
                     <properties>
+                      <autoResizeMode value="4"/>
                       <opaque value="true"/>
                       <preferredScrollableViewportSize width="1000" height="900"/>
                       <preferredSize width="685" height="450"/>
@@ -290,6 +293,7 @@
                   <component id="73ea1" class="javax.swing.JTable" binding="tablaMateriales">
                     <constraints/>
                     <properties>
+                      <autoResizeMode value="4"/>
                       <opaque value="true"/>
                       <preferredScrollableViewportSize width="1000" height="900"/>
                       <preferredSize width="685" height="450"/>
@@ -370,6 +374,7 @@
                     <constraints/>
                     <properties>
                       <autoCreateRowSorter value="true"/>
+                      <autoResizeMode value="4"/>
                       <columnSelectionAllowed value="true"/>
                       <preferredScrollableViewportSize width="1000" height="900"/>
                       <preferredSize width="685" height="450"/>
@@ -423,6 +428,7 @@
                   <component id="205c8" class="javax.swing.JTable" binding="tablaObras">
                     <constraints/>
                     <properties>
+                      <autoResizeMode value="4"/>
                       <opaque value="true"/>
                       <preferredScrollableViewportSize width="1000" height="900"/>
                       <preferredSize width="685" height="450"/>
@@ -449,6 +455,7 @@
                   <component id="c9158" class="javax.swing.JTable" binding="tablaInasistencia">
                     <constraints/>
                     <properties>
+                      <autoResizeMode value="4"/>
                       <opaque value="true"/>
                       <preferredScrollableViewportSize width="1000" height="900"/>
                       <preferredSize width="685" height="450"/>
