--- a/src/main/java/com/criollo/machmillenium/vistas/admin/Administrador.form
+++ b/src/main/java/com/criollo/machmillenium/vistas/admin/Administrador.form
@@ -5,6 +5,7 @@
       <xy x="20" y="20" width="829" height="522"/>
     </constraints>
     <properties>
+      <background color="-3183064"/>
       <opaque value="true"/>
       <preferredSize width="810" height="500"/>
     </properties>
