--- a/src/main/java/com/criollo/machmillenium/vistas/Inicio.form
+++ b/src/main/java/com/criollo/machmillenium/vistas/Inicio.form
@@ -2,37 +2,32 @@
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.criollo.machmillenium.vistas.Inicio">
   <grid id="27dc6" binding="panelPrincipal" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
     <constraints>
-      <xy x="20" y="20" width="869" height="245"/>
+      <xy x="20" y="20" width="534" height="411"/>
     </constraints>
     <properties>
-      <background color="-1"/>
+      <background color="-526345"/>
+      <foreground color="-526345"/>
       <minimumSize width="0" height="0"/>
-      <preferredSize width="845" height="220"/>
+      <preferredSize width="500" height="400"/>
     </properties>
     <border type="none"/>
     <children>
-      <grid id="9e080" layout-manager="FormLayout">
-        <rowspec value="center:d:grow"/>
-        <colspec value="fill:364px:noGrow"/>
-        <colspec value="fill:d:grow"/>
+      <grid id="9e080" layout-manager="BorderLayout" hgap="0" vgap="0">
         <constraints/>
         <properties>
-          <background color="-1"/>
-          <preferredSize width="845" height="220"/>
+          <background color="-526345"/>
+          <foreground color="-526345"/>
+          <preferredSize width="500" height="400"/>
         </properties>
         <border type="none"/>
         <children>
           <grid id="40c74" layout-manager="GridBagLayout">
-            <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="9" fill="0" indent="0" use-parent-layout="false">
-                <preferred-size width="843" height="304"/>
-              </grid>
-              <forms top="1" left="20" bottom="1" right="10" defaultalign-vert="false"/>
-            </constraints>
+            <constraints border-constraint="South"/>
             <properties>
-              <background color="-1"/>
-              <minimumSize width="360" height="200"/>
-              <preferredSize width="360" height="200"/>
+              <background color="-526345"/>
+              <maximumSize width="300" height="200"/>
+              <minimumSize width="300" height="200"/>
+              <preferredSize width="300" height="200"/>
             </properties>
             <border type="none"/>
             <children>
@@ -41,7 +36,7 @@
                   <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="1" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                     <preferred-size width="150" height="-1"/>
                   </grid>
-                  <gridbag top="4" left="4" bottom="4" right="4" weightx="1.0" weighty="0.0"/>
+                  <gridbag top="5" left="80" bottom="5" right="80" weightx="1.0" weighty="0.0"/>
                 </constraints>
                 <properties>
                   <text value=""/>
@@ -52,7 +47,7 @@
                   <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="1" hsize-policy="2" anchor="8" fill="0" indent="0" use-parent-layout="false">
                     <preferred-size width="50" height="50"/>
                   </grid>
-                  <gridbag top="0" left="4" bottom="0" right="0" weightx="0.8" weighty="0.0"/>
+                  <gridbag top="5" left="80" bottom="0" right="0" weightx="0.8" weighty="0.0"/>
                 </constraints>
                 <properties>
                   <text value="Correo electrónico"/>
@@ -60,10 +55,10 @@
               </component>
               <component id="15f3c" class="javax.swing.JLabel">
                 <constraints>
-                  <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="2" anchor="8" fill="0" indent="0" use-parent-layout="false">
+                  <grid row="2" column="0" row-span="1" col-span="2" vsize-policy="1" hsize-policy="2" anchor="8" fill="0" indent="0" use-parent-layout="false">
                     <preferred-size width="72" height="98"/>
                   </grid>
-                  <gridbag top="0" left="4" bottom="0" right="0" weightx="1.0" weighty="0.0"/>
+                  <gridbag top="5" left="80" bottom="0" right="0" weightx="1.0" weighty="0.0"/>
                 </constraints>
                 <properties>
                   <maximumSize width="79" height="17"/>
@@ -77,7 +72,7 @@
                   <grid row="3" column="0" row-span="1" col-span="2" vsize-policy="1" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                     <preferred-size width="150" height="-1"/>
                   </grid>
-                  <gridbag top="4" left="4" bottom="4" right="4" weightx="1.0" weighty="0.0"/>
+                  <gridbag top="5" left="80" bottom="5" right="80" weightx="1.0" weighty="0.0"/>
                 </constraints>
                 <properties/>
               </component>
@@ -86,7 +81,7 @@
                   <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
                     <preferred-size width="145" height="34"/>
                   </grid>
-                  <gridbag top="5" left="4" bottom="0" right="4" weightx="1.0" weighty="0.0"/>
+                  <gridbag top="5" left="4" bottom="5" right="80" weightx="1.0" weighty="0.0"/>
                 </constraints>
                 <properties>
                   <margin top="0" left="0" bottom="0" right="4"/>
@@ -101,7 +96,7 @@
                   <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
                     <preferred-size width="191" height="34"/>
                   </grid>
-                  <gridbag top="5" left="4" bottom="0" right="4" weightx="1.0" weighty="0.0"/>
+                  <gridbag top="5" left="80" bottom="5" right="4" weightx="1.0" weighty="0.0"/>
                 </constraints>
                 <properties>
                   <margin top="0" left="0" bottom="0" right="0"/>
@@ -114,14 +109,15 @@
             </children>
           </grid>
           <component id="c07c7" class="javax.swing.JLabel" binding="label1" custom-create="true">
-            <constraints>
-              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="9" fill="0" indent="0" use-parent-layout="false"/>
-              <forms top="20" left="0" bottom="0" right="20" defaultalign-horz="false" defaultalign-vert="false"/>
-            </constraints>
+            <constraints border-constraint="Center"/>
             <properties>
               <alignmentY value="0.0"/>
+              <background color="-526345"/>
               <enabled value="true"/>
+              <horizontalAlignment value="0"/>
+              <horizontalTextPosition value="0"/>
               <icon value="main.jpg"/>
+              <iconTextGap value="0"/>
               <inheritsPopupMenu value="true"/>
               <minimumSize width="464" height="181"/>
               <preferredSize width="464" height="181"/>
