--- a/src/main/java/com/criollo/machmillenium/vistas/gestor/GestorProyectos.form
+++ b/src/main/java/com/criollo/machmillenium/vistas/gestor/GestorProyectos.form
@@ -5,6 +5,7 @@
       <xy x="20" y="20" width="829" height="522"/>
     </constraints>
     <properties>
+      <background color="-3183064"/>
       <opaque value="true"/>
       <preferredSize width="810" height="500"/>
     </properties>
@@ -16,6 +17,7 @@
           <gridbag weightx="0.0" weighty="0.0"/>
         </constraints>
         <properties>
+          <background color="-3183064"/>
           <minimumSize width="-1" height="-1"/>
           <preferredSize width="810" height="500"/>
           <requestFocusEnabled value="false"/>
